--- a/package.json
+++ b/package.json
@@ -56,7 +56,14 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "fs": "latest",
+    "path": "latest",
+    "gray-matter": "latest",
+    "remark": "latest",
+    "remark-html": "latest",
+    "next-auth": "latest",
+    "disqus-react": "latest"
   },
   "devDependencies": {
     "@types/node": "^20",
